# txtransformer

./: .dockerignore  .editorconfig  .gitignore  .npmignore  Dockerfile.node  LICENSE  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json  tsconfig.json
examples/: README.md  advanced-usage.ts  basic.ts  config-advanced.ts  config-options.ts  config-summary.md  with-python-extractor.ts
python-extractor/: .dockerignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
python-extractor/src/: __init__.py  config.py  dependencies.py  health.py  logger.py  main.py  processor_registry.py
python-extractor/src/deterministic_extraction/: __init__.py  address_extractor.py  date_extractor.py  deterministic_processor.py  pattern_extractor.py  price_extractor.py
python-extractor/src/nlp/: __init__.py  entity_extractor.py  nlp_processor.py  rule_matchers.py
python-extractor/src/ocr/: __init__.py  image_preprocessor.py  ocr_processor.py  quality_assessor.py
python-extractor/src/processors/: __init__.py  base_processor.py  document_processor.py  email_processor.py  pdf_processor.py
python-extractor/src/table_extraction/: __init__.py  camelot_extractor.py  pdfplumber_extractor.py  table_extractor.py  table_processor.py
python-extractor/tests/: __init__.py  conftest.py  test_deterministic_extraction.py  test_helpers.py  test_main.py  test_nlp_processing.py  test_processor_registry.py  test_table_extraction.py
python-extractor/tests/processors/: __init__.py  test_base_processor.py  test_document_processor.py  test_email_processor.py  test_pdf_processor.py
schemas/: alert.v1.json  booking.v1.json  email-canonical.json  generic_message.v1.json  invoice.v1.json  meta-schema-descriptor.v1.json  order.v1.json  signature_request.v1.json  support_followup.v1.json
src/: EmailTransformer.ts  attachment-handler.ts  config.ts  email-parser.ts  events.ts  index.ts  logger.ts  schema-loader.ts  schemas.ts  types.ts  (+2 more)
(+12 files in other folders)
