[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-extractor"
version = "0.1.0"
description = "Python sidecar for email content extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "unstructured[all-docs]>=0.11.8",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.1.78",
    "camelot-py[cv]>=0.11.0",
    "pdfplumber>=0.10.3",
    "dateparser>=1.2.0",
    "price-parser>=0.3.4",
    "pypostal>=1.1",
    "spacy>=3.7.2",
    "regex>=2023.10.3",
    "requests>=2.31.0"
]

[project.scripts]
extractor = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]