[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email-extractor"
version = "0.1.0"
description = "Python sidecar for email content extraction"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "unstructured[all-docs]>=0.11.8",
    "pytesseract>=0.3.10",
    "opencv-python>=4.8.1.78",
    "camelot-py[cv]>=0.11.0",
    "pdfplumber>=0.10.3",
    "dateparser>=1.2.0",
    "price-parser>=0.3.4",
    "spacy>=3.7.2",
    "regex>=2023.10.3",
    "requests>=2.31.0",
    "psutil>=5.9.6",
    "en-core-web-sm",
    "pdf2image>=1.17.0",
]

[project.scripts]
extractor = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]
